styled footer and app section

--- a/src/login.html
+++ b/src/login.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li class="dropdown dropdown--services">
-                    <a class="dropdown__toggle" href="#">Services</a>
+                    <a href="#">Services</a>
                     <ul class="dropdown__content">
                         <li>
                             <a href="#">Cleaning</a>
@@ -56,15 +56,18 @@
             <div class="block-right">
                 <ul class="login-block">
                     <li>
-                        <button class="btn btn--small">Login</button>
-                        <button class="btn btn--small">Sign Up</button>
+                        <button class="btn btn--small btn--white btn--login  u-margin-right-medium"><a href="#">Sign
+                            In</a></button>
+                        <button class="btn btn--small btn--blue"><a href="#">Sign Up</a></button>
                     </li>
                 </ul>
-                <ul class="dropdown__language">
-                    <li><a href="#"> ENG</a></li>
-                    <li><a href="#"> RU</a></li>
-                    <li><a href="#"> GER</a></li>
-                </ul>
+                <div class="form-group">
+                    <select title="Language selector" class="selectpicker language-dropdown">
+                        <option> ENG</option>
+                        <option>RUS</option>
+                        <option>GER</option>
+                    </select>
+                </div>
             </div>
         </nav>
     </header>
