--- a/src/settings.html
+++ b/src/settings.html
@@ -71,44 +71,70 @@
             </div>
         </nav>
     </header>
-    <section class="section-login">
-        <div class="section-login__content-inner container">
-            <div class="row justify-content-md-center">
-                <div class="col-md-5 login-main">
-                    <h3 class="login-main__title">Login</h3>
-                    <form class="login-form">
+    <section class="section-settings">
+        <div class="container-big settings-tab">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <h2 class="heading-settings">Settings</h2>
+                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#personal-info-tab" role="tab"
+                   aria-controls="v-pills-home" aria-selected="true">Personal Information</a>
+                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
+                   aria-controls="v-pills-profile" aria-selected="false">Email and Password <br/>
+                    <p class="tips">Tips for a secure password <br/>
+                        • Use a mix of letters, numbers and symbols <br/>
+                        • Don't use personal information or common words <br/>
+                        • Make it long - the longer the better. We require a minimum of 12 characters
+                    </p>
+                </a>
+            </div>
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="personal-info-tab" role="tabpanel"
+                     aria-labelledby="v-pills-home-tab">
+                    <form>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
+                            <label for="InputEmail1">Email address</label>
+                            <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
+                                   placeholder="Enter email">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                            <label for="passwordToConfirm">Enter Your Password to confirm change</label>
+                            <input type="password" class="form-control" id="passwordToConfirm"
+                                   placeholder="Enter phone number">
                         </div>
-                        <div class="form-group form-group__actions">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                <label class="custom-control-label" for="customCheck1">Remember me</label>
-                            </div>
-                            <a href="#" class="forgot-action">Forgot password?</a>
+                        <button type="submit" class="btn btn-block  btn-primary">Change e-mail address</button>
+                        <div class="form-group">
+                            <label for="inputPassword">Current Password</label>
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Enter password">
                         </div>
-                        <div class="form-group form-group__submit">
-                            <button class="btn btn--blue btn-lg btn-primary btn-block text-uppercase" type="submit">Login</button>
-                            <a href="#">Not member yet? <span>Sign up</span></a>
+                        <div class="form-group">
+                            <label for="newPassword">New Password</label>
+                            <input type="password" class="form-control" id="newPassword" placeholder="Enter Zip code">
                         </div>
+                        <div class="form-group">
+                            <label for="newPassword">Confirm New Password</label>
+                            <input type="password" class="form-control" id="newPasswordConfirm"
+                                   placeholder="Enter Zip code">
+                        </div>
+                        <button type="submit" class="btn btn-block  btn-primary mb-0">Change Password</button>
                     </form>
-                    <div class="divided-line">
-                        <h2><span>or</span></h2>
-                    </div>
-                    <div class="connect-types">
-                        <p class="connect-types__title">Connect with</p>
-                        <div class="connect-types__items">
-                            <a href="#" class="facebook-connect">
-                                <svg aria-hidden="true" data-prefix="fab" data-icon="facebook-f" class="svg-inline--fa fa-facebook-f fa-w-9" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 264 512"><path fill="currentColor" d="M76.7 512V283H0v-91h76.7v-71.7C76.7 42.4 124.3 0 193.8 0c33.3 0 61.9 2.5 70.2 3.6V85h-48.2c-37.8 0-45.1 18-45.1 44.3V192H256l-11.7 91h-73.6v229"></path></svg>
-                            </a>
-                            <a href="#" class="google-connect">
-                                <svg aria-hidden="true" data-prefix="fab" data-icon="google" class="svg-inline--fa fa-google fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512"><path fill="currentColor" d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"></path></svg>
-                            </a>
+                </div>
+                <div class="tab-pane fade" id="credentials-tab" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                    <form>
+                        <div class="form-group">
+                            <label for="InputEmail1">First/Last name</label>
+                            <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
+                                   placeholder="Enter your name">
                         </div>
-                    </div>
+                        <div class="form-group">
+                            <label for="inputPhoneNumber">Phone Number</label>
+                            <input type="number" class="form-control" id="inputPhoneNumber"
+                                   placeholder="Enter phone number">
+                        </div>
+                        <div class="form-group">
+                            <label for="InputZip">email</label>
+                            <input type="number" class="form-control" id="InputZip" placeholder="Enter Zip code">
+                        </div>
+                        <button type="submit" class="btn btn-block  btn-primary">Update Information</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -141,7 +167,7 @@
                 </li>
             </ul>
         </div>
-    </footer>g
+    </footer>
 </main>
 <script src="./index.js"></script>
 </body>
