Post-request Page

--- a/src/login.html
+++ b/src/login.html
@@ -114,8 +114,32 @@
         </div>
     </section>
     <footer class="site-footer mt-auto">
-        <div class="inner">
-            <p id="copy"></p>
+        <div class="upper-footer">
+            <ul class=" nav footer-nav row">
+                <li class="col-md-2"><a class="nav-link">Services</a></li>
+                <li class="col-md-2"><a class="nav-link" href="#">Contact Us</a></li>
+                <li class="col-md-3"><a class="nav-link" href="#">Terms and Conditions</a></li>
+                <li class="col-md-2"><a class="nav-link" href="#">Help</a></li>
+                <li class="col-md-2"><a class="nav-link" href="#">Became Pro</a></li>
+                <li class="col-md-2"><a class="nav-link" href="#">VIP Services</a></li>
+                <li class="col-md-2"><a class="nav-link" href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
+        <div class="lower-footer">
+            <p class="copyright">
+                &copy; 2doo4you 2018. All rights reserved
+            </p>
+            <ul class="nav language-selection">
+                <li>
+                    <a class="nav-link" href="#">English</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#">German</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#">Russian</a>
+                </li>
+            </ul>
         </div>
     </footer>
 </main>
