--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>2doo4you</title>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
-<body>
+<body class="home-page">
 <main role="main" class="main">
     <header class="site-header">
         <nav class="navbar">
@@ -71,7 +71,8 @@
             </div>
         </nav>
     </header>
-    <div class="hero-image">
+    <div class="hero-image"
+         style="background-image: linear-gradient( to right bottom,rgba(108, 122, 137, .4),rgba(108, 122, 137, .4)),url('images/hero-image.jpg');">
         <div class="hero-image__content-inner ">
             <div class="heading-primary">
                 We can help you, with everything and anything
