--- a/src/settings.html
+++ b/src/settings.html
@@ -77,30 +77,29 @@
                 <h2 class="heading-settings">Settings</h2>
                 <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#personal-info-tab" role="tab"
                    aria-controls="v-pills-home" aria-selected="true">Personal Information</a>
-                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
-                   aria-controls="v-pills-profile" aria-selected="false">Email and Password <br/>
-                    <p class="tips">Tips for a secure password <br/>
-                        • Use a mix of letters, numbers and symbols <br/>
-                        • Don't use personal information or common words <br/>
-                        • Make it long - the longer the better. We require a minimum of 12 characters
-                    </p>
-                </a>
+                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
+                       aria-controls="v-pills-profile" aria-selected="false">Email and Password <br/>
+                        <p class="tips">Tips for a secure password <br/>
+                            •	Use a mix of letters, numbers and symbols <br/>
+                            •	Don't use personal information or common words <br/>
+                            •	Make it long - the longer the better. We require a minimum of 12 characters
+                        </p>
+                    </a>
             </div>
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="personal-info-tab" role="tabpanel"
                      aria-labelledby="v-pills-home-tab">
                     <form>
                         <div class="form-group">
-                            <label for="InputEmail1">Email address</label>
-                            <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
+                            <label for="InputEmail">Email address</label>
+                            <input type="text" class="form-control" id="InputEmail" aria-describedby="emailHelp"
                                    placeholder="Enter email">
                         </div>
                         <div class="form-group">
                             <label for="passwordToConfirm">Enter Your Password to confirm change</label>
-                            <input type="password" class="form-control" id="passwordToConfirm"
-                                   placeholder="Enter phone number">
+                            <input type="password" class="form-control" id="passwordToConfirm" placeholder="Enter phone number">
                         </div>
-                        <button type="submit" class="btn btn-block  btn-primary">Change e-mail address</button>
+                        <button type="submit" class="btn btn-block  btn-primary">Change e-mail address </button>
                         <div class="form-group">
                             <label for="inputPassword">Current Password</label>
                             <input type="password" class="form-control" id="inputPassword" placeholder="Enter password">
@@ -111,8 +110,7 @@
                         </div>
                         <div class="form-group">
                             <label for="newPassword">Confirm New Password</label>
-                            <input type="password" class="form-control" id="newPasswordConfirm"
-                                   placeholder="Enter Zip code">
+                            <input type="password" class="form-control" id="newPasswordConfirm" placeholder="Enter Zip code">
                         </div>
                         <button type="submit" class="btn btn-block  btn-primary mb-0">Change Password</button>
                     </form>
@@ -126,8 +124,7 @@
                         </div>
                         <div class="form-group">
                             <label for="inputPhoneNumber">Phone Number</label>
-                            <input type="number" class="form-control" id="inputPhoneNumber"
-                                   placeholder="Enter phone number">
+                            <input type="number" class="form-control" id="inputPhoneNumber" placeholder="Enter phone number">
                         </div>
                         <div class="form-group">
                             <label for="InputZip">email</label>
