--- a/src/became-pro.html
+++ b/src/became-pro.html
@@ -71,45 +71,42 @@
             </div>
         </nav>
     </header>
-    <section class="section-login">
-        <div class="section-login__content-inner container">
-            <div class="row justify-content-md-center">
-                <div class="col-md-6 login-main">
-                    <h3 class="login-main__title">Login</h3>
-                    <form class="login-form">
-                        <div class="form-group">
-                            <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                        </div>
-                        <div class="form-group form-group__actions">
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                <label class="custom-control-label" for="customCheck1">Remember me</label>
-                            </div>
-                            <a href="#" class="forgot-action">Forgot password?</a>
-                        </div>
-                        <div class="form-group form-group__submit">
-                            <button class="btn btn--blue btn-lg btn-primary btn-block text-uppercase" type="submit">Login</button>
-                            <a href="#">Not member yet? <span>Sign up</span></a>
-                        </div>
-                    </form>
-                    <div class="divided-line">
-                        <h2><span>or</span></h2>
-                    </div>
-                    <div class="connect-types">
-                        <p class="connect-types__title">Connect with</p>
-                        <div class="connect-types__items">
-                            <a href="#" class="facebook-connect">
-                                <svg aria-hidden="true" data-prefix="fab" data-icon="facebook-f" class="svg-inline--fa fa-facebook-f fa-w-9" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 264 512"><path fill="currentColor" d="M76.7 512V283H0v-91h76.7v-71.7C76.7 42.4 124.3 0 193.8 0c33.3 0 61.9 2.5 70.2 3.6V85h-48.2c-37.8 0-45.1 18-45.1 44.3V192H256l-11.7 91h-73.6v229"></path></svg>
-                            </a>
-                            <a href="#" class="google-connect">
-                                <svg aria-hidden="true" data-prefix="fab" data-icon="google" class="svg-inline--fa fa-google fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512"><path fill="currentColor" d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"></path></svg>
-                            </a>
-                        </div>
-                    </div>
+    <section class="section-became-pro">
+        <div class="hero-image"
+             style="background-image: linear-gradient( to right bottom,rgba(46, 49, 49, .4),rgba(46, 49, 49, .4)),url('images/becomeProBackground.png');">
+            <div class="pro-services-icon">
+                <img src="images/proServices.png" alt="pro services icon">
+            </div>
+            <div class="block-welcome">
+                <h1 class="heading-primary block-heading">
+                    Hi There
+                </h1>
+                <p class="advertising-text">
+                    Ready to join us as PROFESSIONAL?
+                    Receive push notifications on your phone for new requests near you that match your interest.
+                    Get paid directly by the customer. Have a schedule. Increase your experience and make happy others.
+                </p>
+                <h2 class="heading-secondary download-text"> Download our app </h2>
+                <div class="badge-wrapper">
+                    <a class="badge" href="https://play.google.com/store/apps/details?id=2doo4you">
+                        <img alt="Get it on Google Play"
+                             src="images/google-256x256.png"/>
+                    </a>
+                    <a class="badge" href="#">
+                        <img src="images/apple-256x256.png" alt="Available on AppStore">
+                    </a>
                 </div>
+
+            </div>
+            <div class="text-main">
+                <h1 class="heading-primary page-title text-uppercase">
+                    Became a Pro
+                </h1>
+                <h4 class="heading-sub text-uppercase">WE DECIDE TO MAKE IT EASIER FOR YOU!</h4>
+                <h4 class="heading-sub">
+                    Now you can register and work as a professional
+                    just through our APP!
+                </h4>
             </div>
         </div>
     </section>
