--- a/src/login.html
+++ b/src/login.html
@@ -74,8 +74,8 @@
     </header>
     <section class="section-login">
         <div class="section-login__content-inner container">
-            <div class="row justify-content-md-center justify-content-sm-center">
-                <div class="col-md-6 col-sm-10 col-xs-10 login-main">
+            <div class="row justify-content-center">
+                <div class="col-10 col-md-6 login-main">
                     <h3 class="login-main__title">Login</h3>
                     <form class="login-form">
                         <div class="form-group">
