--- a/src/my-request-rate.html
+++ b/src/my-request-rate.html
@@ -78,17 +78,18 @@
                 <p class="heading-settings__subtitle">Dear customer <br>
                     Please, click check in to hire a professional.
                     You can hire just one by service.</p>
-                <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#personal-info-tab" role="tab"
+                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#personal-info-tab" role="tab"
                    aria-controls="v-pills-home" aria-selected="true">Active</a>
-                <a class="nav-link active" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
+                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
                    aria-controls="v-pills-profile" aria-selected="false">Finished<br/>
                 </a>
             </div>
             <div class="tab-content col-md-8" id="v-pills-tabContent">
-                <div class="tab-pane fade" id="personal-info-tab" role="tabpanel"
+                <div class="tab-pane fade show active" id="personal-info-tab" role="tabpanel"
                      aria-labelledby="v-pills-home-tab">
                     <div class="service-type service-type__rate">
                         <div class="service-type-actions">
+                            <span class="service-type__minimize-title">Room Painting</span>
                             <div class="minimize action">
                                 <svg width="13px" height="2px" viewBox="0 0 13 2" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                     <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
@@ -181,37 +182,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade show active" id="credentials-tab" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                <div class="tab-pane fade" id="credentials-tab" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                         <div class="service-type service-type__rate service-type__finished">
-                            <div class="service-type-actions">
-                                <div class="minimize action">
-                                    <svg width="13px" height="2px" viewBox="0 0 13 2" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
-                                        <title>Line 2</title>
-                                        <desc>Created with Sketch.</desc>
-                                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
-                                            <g id="my-request/active" transform="translate(-1328.000000, -188.000000)" fill-rule="nonzero" stroke="#000000">
-                                                <path d="M1328.5,189.25 L1340.5,189.25" id="Line-2"></path>
-                                            </g>
-                                        </g>
-                                    </svg>
-                                </div>
-                                <div class="close action">
-                                    <svg width="13px" height="13px" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
-                                        <title>noun_Error_925455</title>
-                                        <desc>Created with Sketch.</desc>
-                                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                            <g id="my-request/active" transform="translate(-1360.000000, -183.000000)" fill="#000000" fill-rule="nonzero">
-                                                <g id="noun_Error_925455" transform="translate(1360.000000, 183.000000)">
-                                                    <path d="M12.8800065,0.117203567 C13.039199,0.274475672 13.0400665,0.529988984 12.8821753,0.688553737 L0.695493752,12.8808044 C0.537168826,13.0389383 0.279511277,13.0398001 0.120318818,12.8829588 C-0.0393074086,12.7256867 -0.0401749424,12.4697425 0.118149983,12.3116087 L12.3048316,0.119357979 C12.4631565,-0.0387758915 12.7203803,-0.040068539 12.8800065,0.117203567 Z" id="Shape"></path>
-                                                    <path d="M0.688901386,0.118363403 L12.880647,12.3046884 C13.0387743,12.4630087 13.0400669,12.7206587 12.8828013,12.8798465 C12.7255357,13.0390343 12.4696021,13.0403356 12.3110439,12.8820153 L0.119298345,0.695256525 C-0.0388289746,0.536936232 -0.0401215685,0.279719976 0.117574886,0.12009842 C0.274409612,-0.0390893814 0.530343202,-0.0403906441 0.688901386,0.118363403 Z" id="Shape"></path>
-                                                </g>
-                                            </g>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
                             <div class="service-type__content">
                                 <table class="finished-orders">
                                     <thead>
