finished my requests functionality

--- a/src/book-service.html
+++ b/src/book-service.html
@@ -133,11 +133,6 @@
                     <ul class="js-badger-accordion">
                         <li>Sort By</li>
                         <li><a class="filter-link" href="#">Most Popular</a></li>
-                        <li>
-                            <div class="filter-link js-badger-accordion-header font-weight-normal expand-selection">
-                                See All
-                            </div>
-                        </li>
                         <li class="badger-accordion__panel js-badger-accordion-panel">
                             <ul class="js-badger-accordion-panel-inner">
                                 <li><a class="filter-link" href="#">A - Z</a></li>
@@ -145,12 +140,17 @@
                                 <li><a class="filter-link" href="#"> Closest</a></li>
                             </ul>
                         </li>
+                        <li>
+                            <div class="filter-link js-badger-accordion-header font-weight-normal expand-selection">
+                                See All
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="section-professionals__content-block">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-12 col-lg-3 service-types">
                         <ul class="js-badger-accordion">
                             <li>
                                 <div class="js-badger-accordion-header font-weight-bold">
@@ -404,7 +404,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-12 col-lg-9">
                         <div class="professionals">
                             <h4>Professionals</h4>
                             <div class="row">
