--- a/src/my-request-empty.html
+++ b/src/my-request-empty.html
@@ -10,14 +10,11 @@
 <body>
 <main role="main" class="main">
     <header class="site-header">
-
         <nav class="navbar">
+            <a class="navbar-brand site-logo" href="index.html">
+                <img src="./images/logo.png" alt="Site logo">
+            </a>
             <ul class="menu">
-                <li>
-                    <a class="navbar-brand site-logo" href="#">
-                        <span class="d-inline-block align-top">Logo</span>
-                    </a>
-                </li>
                 <li class="dropdown dropdown--services">
                     <a href="#">Services</a>
                     <ul class="dropdown__content">
@@ -45,32 +42,65 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Became Pro</a>
+                    <a href="#">Contact Us</a>
+                </li>
+            </ul>
+            <div class="block-right">
+                <ul class="login-block logged-in">
+                    <li>
+                        <a href="#">My Requests</a>
+                    </li>
+                    <li>
+                        <a class="" href="./settings.html">Settings</a>
+                    </li>
+                </ul>
+                <div class="user-name"><a class="font-weight-bold text-color-black" href="#">Martin Broch</a></div>
+            </div>
+            <div id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+        <div class="sidebar">
+            <ul class="mobile-menu-sidebar">
+                <li class="dropdown second-level__trigger">
+                    <a href="#">Services</a>
+                    <ul class="second-level__content">
+                        <li>
+                            <a href="#">Cleaning</a>
+                        </li>
+                        <li>
+                            <a href="#">Garden/Outdoor</a>
+                        </li>
+                        <li>
+                            <a href="#">Plumbing</a>
+                        </li>
+                        <li>
+                            <a href="#">Electrical</a>
+                        </li>
+                        <li>
+                            <a href="#">Tradesman</a>
+                        </li>
+                        <li>
+                            <a href="#">IT</a>
+                        </li>
+                        <li>
+                            <a href="#">See All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Help</a>
+                    <a href="#">My Requests</a>
+                </li>
+                <li>
+                    <a class="current-page" href="./settings.html">Settings</a>
                 </li>
             </ul>
-            <div class="block-right">
-                <ul class="login-block">
-                    <li>
-                        <button class="btn btn--small btn--white btn--login  u-margin-right-medium"><a href="#">Sign
-                            In</a></button>
-                        <button class="btn btn--small btn--blue"><a href="#">Sign Up</a></button>
-                    </li>
-                </ul>
-                <div class="form-group">
-                    <select title="Language selector" class="selectpicker language-dropdown">
-                        <option> ENG</option>
-                        <option>RUS</option>
-                        <option>GER</option>
-                    </select>
-                </div>
-            </div>
-        </nav>
+        </div>
     </header>
     <section class="request-settings">
         <div class="container-big settings-tab">
