--- a/src/settings.html
+++ b/src/settings.html
@@ -42,31 +42,19 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Became Pro</a>
-                </li>
-                <li>
                     <a href="#">Contact Us</a>
-                </li>
-                <li>
-                    <a href="#">Help</a>
                 </li>
             </ul>
             <div class="block-right">
-                <ul class="login-block">
+                <ul class="login-block logged-in">
                     <li>
-                        <button class="btn btn--small btn--white btn--login  u-margin-right-medium"><a href="#">Sign
-                            In</a></button>
-                        <button class="btn btn--small btn--blue"><a href="#">Sign Up</a></button>
+                        <a href="#">My Requests</a>
+                    </li>
+                    <li>
+                        <a class="current-page" href="./settings.html">Settings</a>
                     </li>
                 </ul>
-                <div class="form-group">
-                    <select title="Language selector"  data-width="fit" class=" custom-select selectpicker language-dropdown">
-                        <option>ENG</option>
-                        <option>RUS</option>
-                        <option>GER</option>
-                    </select>
-                </div>
-
+                <div class="user-name"><a class="font-weight-bold text-color-black" href="#">Martin Broch</a></div>
             </div>
             <div id="mobile-menu">
                 <span></span>
@@ -103,13 +91,13 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Became Pro</a>
-                </li>
-                <li>
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Help</a>
+                    <a href="#">My Requests</a>
+                </li>
+                <li>
+                    <a class="current-page" href="./settings.html">Settings</a>
                 </li>
             </ul>
         </div>
@@ -119,15 +107,15 @@
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <h2 class="heading-settings">Settings</h2>
                 <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#personal-info-tab" role="tab"
-                   aria-controls="v-pills-home" aria-selected="true">Personal Information</a>
-                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
-                       aria-controls="v-pills-profile" aria-selected="false">Email and Password <br/>
-                        <p class="tips">Tips for a secure password <br/>
-                            •	Use a mix of letters, numbers and symbols <br/>
-                            •	Don't use personal information or common words <br/>
-                            •	Make it long - the longer the better. We require a minimum of 12 characters
-                        </p>
-                    </a>
+                   aria-controls="v-pills-home" aria-selected="true">Email and Password </a>
+                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#credentials-tab" role="tab"
+                   aria-controls="v-pills-profile" aria-selected="false">Personal Information<br/>
+                    <p class="tips">Tips for a secure password <br/>
+                        • Use a mix of letters, numbers and symbols <br/>
+                        • Don't use personal information or common words <br/>
+                        • Make it long - the longer the better. We require a minimum of 12 characters
+                    </p>
+                </a>
             </div>
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="personal-info-tab" role="tabpanel"
@@ -135,43 +123,42 @@
                     <form>
                         <div class="form-group">
                             <label for="InputEmail">Email address</label>
-                            <input type="text" class="form-control" id="InputEmail" aria-describedby="emailHelp"
-                                   placeholder="Enter email">
+                            <input type="text" class="form-control" id="InputEmail" aria-describedby="emailHelp">
                         </div>
                         <div class="form-group">
                             <label for="passwordToConfirm">Enter Your Password to confirm change</label>
-                            <input type="password" class="form-control" id="passwordToConfirm" placeholder="Enter phone number">
+                            <input type="password" class="form-control" id="passwordToConfirm">
                         </div>
-                        <button type="submit" class="btn btn-block  btn-primary">Change e-mail address </button>
+                        <button type="submit" class="btn btn-block  btn-primary">Change e-mail address</button>
                         <div class="form-group">
                             <label for="inputPassword">Current Password</label>
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Enter password">
+                            <input type="password" class="form-control" id="inputPassword">
                         </div>
                         <div class="form-group">
                             <label for="newPassword">New Password</label>
-                            <input type="password" class="form-control" id="newPassword" placeholder="Enter Zip code">
+                            <input type="password" class="form-control" id="newPassword">
                         </div>
                         <div class="form-group">
                             <label for="newPassword">Confirm New Password</label>
-                            <input type="password" class="form-control" id="newPasswordConfirm" placeholder="Enter Zip code">
+                            <input type="password" class="form-control" id="newPasswordConfirm">
                         </div>
                         <button type="submit" class="btn btn-block  btn-primary mb-0">Change Password</button>
+                        <p class="forgot-password pt-3">Forgot your password?<a href="#" class="text-color-black font-weight-bold ml-3">Click Here</a></p>
                     </form>
                 </div>
                 <div class="tab-pane fade" id="credentials-tab" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                     <form>
                         <div class="form-group">
                             <label for="InputEmail1">First/Last name</label>
-                            <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp"
-                                   placeholder="Enter your name">
+                            <input type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="form-group">
                             <label for="inputPhoneNumber">Phone Number</label>
-                            <input type="number" class="form-control" id="inputPhoneNumber" placeholder="Enter phone number">
+                            <input type="number" class="form-control" id="inputPhoneNumber">
                         </div>
                         <div class="form-group">
-                            <label for="InputZip">email</label>
-                            <input type="number" class="form-control" id="InputZip" placeholder="Enter Zip code">
+                            <label for="InputZip">ZIP Code</label>
+                            <input type="number" class="form-control" id="InputZip">
                         </div>
                         <button type="submit" class="btn btn-block  btn-primary">Update Information</button>
                     </form>
