--- a/src/view-account-registered.html
+++ b/src/view-account-registered.html
@@ -42,31 +42,19 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Became Pro</a>
-                </li>
-                <li>
                     <a href="#">Contact Us</a>
-                </li>
-                <li>
-                    <a href="#">Help</a>
                 </li>
             </ul>
             <div class="block-right">
-                <ul class="login-block">
+                <ul class="login-block logged-in">
                     <li>
-                        <button class="btn btn--small btn--white btn--login  u-margin-right-medium"><a href="#">Sign
-                            In</a></button>
-                        <button class="btn btn--small btn--blue"><a href="#">Sign Up</a></button>
+                        <a href="#">My Requests</a>
+                    </li>
+                    <li>
+                        <a class="" href="./settings.html">Settings</a>
                     </li>
                 </ul>
-                <div class="form-group">
-                    <select title="Language selector"  data-width="fit" class=" custom-select selectpicker language-dropdown">
-                        <option>ENG</option>
-                        <option>RUS</option>
-                        <option>GER</option>
-                    </select>
-                </div>
-
+                <div class="user-name"><a class="font-weight-bold text-color-black" href="#">Martin Broch</a></div>
             </div>
             <div id="mobile-menu">
                 <span></span>
@@ -103,13 +91,13 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Became Pro</a>
-                </li>
-                <li>
                     <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Help</a>
+                    <a href="#">My Requests</a>
+                </li>
+                <li>
+                    <a class="current-page" href="./settings.html">Settings</a>
                 </li>
             </ul>
         </div>
